# sam

./: .gitignore  CMakeLists.txt
resources/: ssd_mobilenet_v3_large.pbtxt
src/: main.cpp
src/Detection/: Detection.cpp  Detection.h  detection.cpp  detection.h
src/Detection/DTO/: DetectionDTO.h
src/Detection/Detector/: Detector.cpp  Detector.h
src/Detection/Model/: MessageQueue.h  SSDModel.cpp  SSDModel.h
src/Detection/Video/: Video.cpp  Video.h
